fixed header spacing issue + added jquery and randomized current feature

--- a/css/style.css
+++ b/css/style.css
@@ -127,8 +127,8 @@ logo
 	background-repeat: no-repeat;
 	display: block;
 	text-indent: -9999px;
-	width: 251px;
-	height: 36px;
+	width: 187px;
+	height: 33px;
 	margin: 26px 0px 3px 0px;
 }
 
